--- a/public/index.html
+++ b/public/index.html
@@ -32,6 +32,10 @@
         </div>
 
     </div>
-    
+
+    <script src="http://localhost:8097"></script>
+    <script src="https://unpkg.com/react@16.0.0/umd/react.development.js"></script>
+    <script src="https://unpkg.com/react-dom@16.0.0/umd/react-dom.development.js"></script>
+    <script src="./reactjs/app.js"></script>
 </body>
 </html>
