--- a/public/index.html
+++ b/public/index.html
@@ -21,13 +21,11 @@
                         <div class="card-image">
                             <img src="https://www.tori.ng/userfiles/image/2018/nov/08/naira-dollar.jpg"/>
                         </div>
-                        <div class="card-description">
-                            <div id="app">
-
-                            </div>
+                        <div class="card-description" id="app">
                         </div>
                     </div>
                 </div>
+
             </div>
         </div>
 
