--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Currency Converter</title>
+    <style>
+        select{
+            display: block;
+        }
+        
+    </style>
 </head>
 <body>
 
